RESOLVED FIXED163848
[Render Tree Mutation] First letter should not mutate the render tree while in layout.
https://bugs.webkit.org/show_bug.cgi?id=163848
Summary [Render Tree Mutation] First letter should not mutate the render tree while i...
alan
Reported 2016-10-22 07:42:06 PDT
RenderBlock::::updateFirstLetter() RenderBlock::computePreferredLogicalWidths() RenderTableCell::layout()
Attachments
patch (16.20 KB, patch)
2017-08-09 07:07 PDT, Antti Koivisto
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-elcapitan (1.04 MB, application/zip)
2017-08-09 08:24 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (1.13 MB, application/zip)
2017-08-09 08:29 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-elcapitan (1.79 MB, application/zip)
2017-08-09 08:36 PDT, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (1.24 MB, application/zip)
2017-08-09 10:20 PDT, Build Bot
no flags
patch (11.85 KB, patch)
2017-08-10 07:37 PDT, Antti Koivisto
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-elcapitan (1.01 MB, application/zip)
2017-08-10 08:47 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (1.17 MB, application/zip)
2017-08-10 08:53 PDT, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-elcapitan (1.80 MB, application/zip)
2017-08-10 09:02 PDT, Build Bot
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (1.02 MB, application/zip)
2017-08-10 09:18 PDT, Build Bot
no flags
patch (16.01 KB, patch)
2017-08-12 02:31 PDT, Antti Koivisto
no flags
patch (16.21 KB, patch)
2017-08-12 02:35 PDT, Antti Koivisto
no flags
patch (16.23 KB, patch)
2017-08-12 02:39 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2017-08-09 07:07:42 PDT
Build Bot
Comment 2 2017-08-09 08:24:41 PDT
Comment on attachment 317698 [details] patch Attachment 317698 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/4284263 New failing tests: fast/css-generated-content/quote-first-letter.html imported/blink/fast/css/first-letter-range-insert.html
Build Bot
Comment 3 2017-08-09 08:24:42 PDT
Created attachment 317702 [details] Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-08-09 08:29:54 PDT
Comment on attachment 317698 [details] patch Attachment 317698 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/4284269 New failing tests: fast/css-generated-content/quote-first-letter.html imported/blink/fast/css/first-letter-range-insert.html
Build Bot
Comment 5 2017-08-09 08:29:56 PDT
Created attachment 317703 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-08-09 08:36:22 PDT
Comment on attachment 317698 [details] patch Attachment 317698 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4284277 New failing tests: fast/css-generated-content/quote-first-letter.html imported/blink/fast/css/first-letter-range-insert.html
Build Bot
Comment 7 2017-08-09 08:36:23 PDT
Created attachment 317704 [details] Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 8 2017-08-09 10:20:04 PDT
Comment on attachment 317698 [details] patch Attachment 317698 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4284664 New failing tests: fast/css-generated-content/quote-first-letter.html imported/blink/fast/css/first-letter-range-insert.html
Build Bot
Comment 9 2017-08-09 10:20:06 PDT
Created attachment 317717 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Antti Koivisto
Comment 10 2017-08-10 01:41:13 PDT
Antti Koivisto
Comment 11 2017-08-10 07:37:08 PDT
Build Bot
Comment 12 2017-08-10 08:47:23 PDT
Comment on attachment 317805 [details] patch Attachment 317805 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/4290134 New failing tests: imported/blink/fast/css/first-letter-render-quote.html fast/text-autosizing/ios/first-letter.html
Build Bot
Comment 13 2017-08-10 08:47:25 PDT
Created attachment 317809 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 14 2017-08-10 08:53:49 PDT
Comment on attachment 317805 [details] patch Attachment 317805 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/4290150 New failing tests: imported/blink/fast/css/first-letter-render-quote.html fast/text-autosizing/ios/first-letter.html
Build Bot
Comment 15 2017-08-10 08:53:50 PDT
Created attachment 317810 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 16 2017-08-10 09:02:57 PDT
Comment on attachment 317805 [details] patch Attachment 317805 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4290149 New failing tests: imported/blink/fast/css/first-letter-render-quote.html fast/text-autosizing/ios/first-letter.html
Build Bot
Comment 17 2017-08-10 09:02:59 PDT
Created attachment 317811 [details] Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 18 2017-08-10 09:18:02 PDT
Comment on attachment 317805 [details] patch Attachment 317805 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4290156 New failing tests: imported/blink/fast/css/first-letter-render-quote.html fast/text-autosizing/ios/first-letter.html
Build Bot
Comment 19 2017-08-10 09:18:04 PDT
Created attachment 317816 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Antti Koivisto
Comment 20 2017-08-12 02:31:16 PDT
Build Bot
Comment 21 2017-08-12 02:33:21 PDT
Attachment 317990 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/TextAutoSizing.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 22 2017-08-12 02:35:49 PDT
Build Bot
Comment 23 2017-08-12 02:38:13 PDT
Attachment 317991 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/TextAutoSizing.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 24 2017-08-12 02:39:56 PDT
WebKit Commit Bot
Comment 25 2017-08-14 00:10:21 PDT
Comment on attachment 317992 [details] patch Clearing flags on attachment: 317992 Committed r220646: <http://trac.webkit.org/changeset/220646>
WebKit Commit Bot
Comment 26 2017-08-14 00:10:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.