[Render Tree Mutation] First letter should not mutate the render tree while in layout. https://bugs.webkit.org/show_bug.cgi?id=163848 Source/WebCore:

Reviewed by Zalan Bujtas.

RenderBlock::updateFirstLetter shouldn't be called during layout. Instead it should
be invoked by the RenderTreeUpdater.

With this future patches can move updateFirstLetter() and the related functions
completely out of the render tree.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::layout):

    No more updateFirstLetter calls during layout...

(WebCore::RenderBlock::computePreferredLogicalWidths):

    ...or preferred width computation.

(WebCore::RenderBlock::updateFirstLetter):
* rendering/RenderBlock.h:
* rendering/RenderRubyRun.cpp:
(WebCore::RenderRubyRun::updateFirstLetter):
* rendering/RenderRubyRun.h:
* rendering/RenderTable.cpp:
(WebCore::RenderTable::updateFirstLetter):
* rendering/RenderTable.h:
* rendering/svg/RenderSVGText.cpp:
(WebCore::RenderSVGText::updateFirstLetter):
* rendering/svg/RenderSVGText.h:
* style/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::popParent):

    Call updateFirstLetter when closing the element. All of of descedant renderers are known here
    so this can be resolved correctly.

LayoutTests:

<rdar://problem/33402718>

Reviewed by Zalan Bujtas.

* fast/text-autosizing/ios/first-letter-expected.html: Added.

    Turn into reftest for easier debugging and robustness.

* imported/blink/fast/css/first-letter-range-insert-expected.txt:

    This is crash-or-assert test and the output change here doesn't matter.

* platform/ios/fast/text-autosizing/ios/first-letter-expected.txt: Removed.
* platform/mac/fast/text-autosizing/ios/first-letter-expected.txt: Removed.


Canonical link: https://commits.webkit.org/192216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220646 268f45cc-cd09-0410-ab3c-d52691b4dbfc